feat: Added editMessage functionality
