# docs/swagger.yaml
@@ -1393,6 +1393,40 @@ paths:
           content:
             application/json: {}
 
+  /chat/editMessage/{instanceName}:
+      patch:
+        tags:
+          - Chat Controller
+        summary: Edit Message
+        description: |
+            This endpoint is used to edit a message in the chat instance.
+            It requires the instanceName parameter in the path and the id and editContent in the query.
+        parameters:
+          - name: instanceName
+            in: path
+            schema:
+              type: string
+            required: true
+            description: '- required'
+            example: 'codechat_v1'
+          - name: id
+            in: query
+            schema:
+              type: string
+            required: true
+            description: 'ID of the message to be edited'
+          - name: newContent
+            in: query
+            schema:
+              type: string
+            required: true
+            description: 'The new content to be added'
+        responses:
+          '200':
+            description: Sucessful response
+            content:
+              application/json: {}
+  
   /chat/deleteMessageForEveryone/{instanceName}:
       delete:
         tags:
